--- a/login_form.html
+++ b/login_form.html
@@ -1,4 +1,4 @@
-<form action="/" method="post">
+<form action="/login.php" method="post">
     <input type="text" name="login" placeholder="Логин/емэил">
     <input type="password" name="pass" placeholder="Пароль">
     <input type="submit" value="send">
