--- a/register_form.html
+++ b/register_form.html
@@ -1,6 +1,6 @@
 <form action="/register.php" method="post">
     <input type="text" name="name" placeholder="Имя">
-    <input type="text" name="login" placeholder="Логин/емэил">
+    <input type="text" name="login" placeholder="емэил">
     <input type="password" name="pass" placeholder="Пароль">
     <input type="password" name="pass2" placeholder="Повторить пароль">
 
